# ML-P1

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp
docs/html/: annotated.html  annotated_dup.js  classPerceptron-members.html  classPerceptron.html  classPerceptron.js  classPerceptronLayer-members.html  classPerceptronLayer.html  classPerceptronLayer.js  classPerceptronNetwork-members.html  classPerceptronNetwork.html  classPerceptronNetwork.js  classes.html  dir_0be001e076346284cf294e590c83e20b.html  dir_101ac6e9245110eb379ba110f8164517.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_1931ed50a50fcfaba31d60ba6bbbab02.html  dir_52f307aef3b8bed3a21ae20412c4ab45.html  dir_571baa546d31e221a2c13397fe17e101.html  dir_5c8a75f63b79b3bc7642d072dad8d2d8.html  dir_5e0a3bcbb9793dec699aaa972aa5ee7e.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_8fe539ef0977bed51ecafc05020cf2a3.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.js  dir_b29cc1a657455f37e2e389b54a64f1e6.html  dir_ea597c1cc0155e5e13062a73a354e4bd.html  dir_f09d564695a8a7f5713b0ef37bdf7d31.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  index.html  md_README.html  navtreedata.js  navtreeindex0.js  pages.html  perceptron_8hpp.html  perceptron_8hpp_source.html  perceptronlayer_8hpp.html  perceptronlayer_8hpp.js  (+4 more)
docs/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  (+5 more)
src/: perceptron.cpp  perceptronlayer.cpp  perceptronnetwork.cpp
src/include/: perceptron.hpp  perceptronlayer.hpp  perceptronnetwork.hpp
test/: test.cpp
